force-app/main/default/objects/Account_Sap_Error__c/Account_Sap_Error__c.object-meta.xml
<CustomObject>
    <description>Object that stores errors related to account to sap transactions</description>
    <label>Account Sap Error</label>
    <nameField>
        <displayFormat>Account-{000000}</displayFormat>
        <label>Account Sap Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sap Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>