force-app/main/default/objects/Account_Sap_Error__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>