force-app/main/default/objects/Account_Sap_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Holds tips about what was wrong on the account process</description>
    <label>Error Message</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>