force-app/main/default/objects/Account_Sap_Error__c/fields/Reason_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Reason_Transaction__c</fullName>
    <label>Reason Transaction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Account Owner</fullName>
            </value>
            <value>
                <fullName>New Account</fullName>
            </value>
            <value>
                <fullName>New Account Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>