force-app/main/default/objects/Account_Sap_Error__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>15</length>
    <type>Text</type>
</CustomField>